# MiniQA_RAG

./: README.md  docker-compose.yml  main.py  miniQA.ipynb  pyproject.toml  send_to_socket.py  text_processing.py  utils.py
milvus/: test_script.py
socket/: jorjin_multi_client.py
