[tool.poetry]
name = "sfc"
version = "0.1.0"
description = ""
authors = ["mojoee <moritzsontheimer@web.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8.1"
ipykernel = "^6.29.4"
jupyter = "^1.0.0"
langchain-community = "^0.2.1"
langchain-core = "^0.2.3"
langchain-experimental = "^0.0.59"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
